--- a/index.html
+++ b/index.html
@@ -1,13 +1,240 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Научиться учиться</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          src="images/logo_place_header.svg"
+          alt="логотип Яндекс Практикум"
+          class="logo logo_place_header"
+        />
+        <h1 class="title_place_header">Научиться учиться</h1>
+        <p class="subtitle_place_header">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a href="#" class="link">Узнать &#129042;</a>
+        </p>
+        <img
+          src="./images/header-image.png"
+          alt="Опять двойка"
+          class="main-illustration_place_header"
+        />
+        <div class="square-pic_place_header"></div>
+      </header>
+      <section class="description">
+        <div class="description_two_columns">
+          <div>
+            <h2 class="description_two_columns_brief">
+              Главные проблемы в обучении
+            </h2>
+          </div>
+          <div class="description_two_columns_main-text">
+            <p class="description_two_columns_main-text_top">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать
+              материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
+              решать однообразные задачи, чтобы лучше сдать тест, но часто в
+              итоге это не дает нам реального знания. Зубрежка быстро
+              выветривается и не приносит пользы.
+            </p>
+            <p class="description_two_columns_main-text_middle">
+              <b class="text_bold">Вывод:</b>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с
+              этим делать?
+            </p>
+            <p class="description_two_columns_main-text_bottom">
+              Конкретные техники и упражнения помогают изменить подход к
+              обучению, сделать его эффективным и захватывающим. Эти же техники
+              применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <h1 class="digits_section_title">Цифры и факты</h1>
+        <h2 class="digits_section_subtitle">Про учёбу и мозг</h2>
+        <div class="table">
+          <div class="table_cell">
+            <h3 class="table_cell_heading">86 миллиардов</h3>
+            <p class="table_cell_text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">2.1 миллиарда</h3>
+            <p class="table_cell_text">
+              Число нуждающихся в повышении квалификации
+            </p>
+            <p class="table_cell_text text_cite">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">1000 терабайт</h3>
+            <p class="table_cell_text">Объём памяти человека</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">500 триллионов</h3>
+            <p class="table_cell_text">
+              Число ответственных за обучение нервных синапсов у взрослого
+              человека
+            </p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">420 миллионов</h3>
+            <p class="table_cell_text">
+              Число взрослых людей моложе 25 лет, не имеющих образования для
+              трудоустройства
+            </p>
+            <p class="table_cell_text text_cite">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">17–20 лет</h3>
+            <p class="table_cell_text">Пик обучаемости</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">1885 год</h3>
+            <p class="table_cell_text">Открытие кривой забывания</p>
+          </div>
+          <div class="table_cell">
+            <h3 class="table_cell_heading">1889 год</h3>
+            <p class="table_cell_text">Открытие условного рефлекса</p>
+          </div>
+        </div>
+      </section>
+      <section class="feynman">
+        <h1 class="feynman_title">Метод Фейнмана</h1>
+        <h2 class="feynman_subtitle">Выучить и не забыть.</h2>
+        <p class="feynman_link link">Подробнее &#129042;</p>
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman_image" />
+      </section>
+      <section class="kaufman">
+        <img
+          src="/images/kaufman-triangle.svg"
+          alt=""
+          class="kaufman_triangle"
+        />
+        <h1 class="kaufman_title dark-theme">Принципы обучения</h1>
+        <h2 class="kaufman_subtitle dark-theme">от Джоша Кауфмана</h2>
+        <div class="kaufman_table table">
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">1</h3>
+            <p class="table_cell_text dark_theme">
+              Выберите привлекательный проект.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">2</h3>
+            <p class="table_cell_text dark_theme">
+              Сосредоточьтесь на каком-то одном навыке.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">3</h3>
+            <p class="table_cell_text dark_theme">
+              Определите целевой уровень мастерства.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">4</h3>
+            <p class="table_cell_text dark_theme">
+              Разбейте навык на элементы.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">5</h3>
+            <p class="table_cell_text dark_theme">
+              Приготовьте всё необходимое для занятий.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">6</h3>
+            <p class="table_cell_text dark_theme">
+              Устраните препятствия для занятий.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">7</h3>
+            <p class="table_cell_text dark_theme">
+              Выделите специальное время для занятий.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">8</h3>
+            <p class="table_cell_text dark_theme">
+              Создайте быстрые петли обратной связи.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">9</h3>
+            <p class="table_cell_text dark_theme">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </div>
+          <div class="table_cell kaufman_table_cell dark-theme">
+            <h3 class="table_cell_heading dark_theme">10</h3>
+            <p class="table_cell_text dark_theme">
+              Уделяйте внимание количеству и скорости.
+            </p>
+          </div>
+        </div>
+      </section>
+      <footer class="footer dark-theme">
+        <div class="footer_columns">
+          <div class="footer_content_copyright">
+            <img
+              src="/images/logo_place_footer.svg"
+              alt="Яндекс Практикум"
+              class="footer_logo"
+            />
+            <h4 class="footer_author">&copy Голиков Артем</h4>
+          </div>
+          <div>
+            <h4 class="footer_columns_heading_about">О Практикуме</h4>
+            <div class="footer_columns_heading_links">
+              <a href="#" style="color: white" class="links_style">Главная</a>
+              <a href="#" style="color: white" class="links_style">Концепция</a>
+              <a href="#" style="color: white" class="links_style"
+                >Наставники</a
+              >
+            </div>
+          </div>
+          <div class="footer_columns_socials">
+            <h4 class="footer_columns_heading_socials">Соцсети</h4>
+            <div class="footer_columns_heading_socials_links">
+              <div>
+                <img
+                  src="/images/youtube-icon.svg"
+                  alt=""
+                  class="footer_columns_heading_socials_links_logo"
+                /><a href="#" style="color: white" class="links_style"
+                  >YouTube</a
+                >
+              </div>
+              <div>
+                <img
+                  src="/images/vk_color_white.svg"
+                  alt=""
+                  class="footer_columns_heading_socials_links_logo"
+                />
+                <a href="#" style="color: white" class="links_style"
+                  >ВКонтаке</a
+                >
+              </div>
+              <div>
+                <img
+                  src="/images/tiktok-icon.svg"
+                  alt=""
+                  class="footer_columns_heading_socials_links_logo"
+                />
+                <a href="#" style="color: white" class="links_style">TikTok</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
