index.html BEM fixes

--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
         <img
           src="./images/logo_place_header.svg"
           alt="логотип Яндекс Практикум"
-          class="logo__place_header"
+          class="logo_place_header"
         />
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="header__link animation__opacity">Узнать &rarr;</a>
+          <a href="#" class="header__link opacity">Узнать &rarr;</a>
         </p>
         <img
           src="./images/header-image.png"
           alt="Опять двойка"
           class="header__main-illustration"
         />
-        <div class="header__square-pic animation__rotation"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
       <main>
         <section class="description">
           <div class="two-columns">
-            <h2 class="two-columns_brief">Главные проблемы в обучении</h2>
-            <div class="two-columns_main-text">
-              <p class="two-columns_main-text">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__main-text">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
                 тренируемся решать однообразные задачи, чтобы лучше сдать тест,
                 но часто в итоге это не дает нам реального знания. Зубрежка
                 быстро выветривается и не приносит пользы.
               </p>
-              <p class="two-columns_main-text">
-                <span class="two-columns_span-accent">Вывод:</span>
+              <p class="two-columns__main-text">
+                <span class="two-columns__span-accent">Вывод:</span>
                 учиться тоже нужно уметь, но почему-то этому мало где учат. Что
                 с этим делать?
               </p>
-              <p class="two-columns_main-text">
+              <p class="two-columns__main-text">
                 Конкретные техники и упражнения помогают изменить подход к
                 обучению, сделать его эффективным и захватывающим. Эти же
                 техники применяются на примере обучения в Практикуме.
@@ -136,8 +136,8 @@
       </section>
       <section class="oakley">
         <div class="two-columns">
-          <h3 class="two-columns_brief">История Барбары Оакли.</h3>
-          <p class="two-columns_main-text">
+          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+          <p class="two-columns__main-text">
             С детства Барбаре не давалась математика. Она считала себя
             законченным гуманитарием, причём далеко не самым умным. В армии она
             изучала русский язык, чтобы получить надбавку, да так успешно, что
@@ -153,9 +153,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-        <a class="link feynman__link animation__opacity" href="#"
-          >Подробнее &rarr;</a
-        >
+        <a class="link feynman__link opacity" href="#">Подробнее &rarr;</a>
         <img src="./images/feynman.png" alt="Фейнман" class="feynman__image" />
       </section>
       <section class="digits">
@@ -163,50 +161,46 @@
         <h2 class="digits__subtitle">Про учёбу и мозг</h2>
         <div class="table">
           <div class="table__cell">
-            <h3 class="table__cell_heading">86 миллиардов</h3>
-            <p class="table__cell_text">Число нейронов в мозге человека</p>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">2.1 миллиарда</h3>
-            <p class="table__cell_text">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
-            <p class="table__cell_text table__cell_text_cite">
-              Всемирный Банк, 2017
-            </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">1000 терабайт</h3>
-            <p class="table__cell_text">Объём памяти человека</p>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">500 триллионов</h3>
-            <p class="table__cell_text">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
             </p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">420 миллионов</h3>
-            <p class="table__cell_text">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
             </p>
-            <p class="table__cell_text table__cell_text_cite">
-              Всемирный Банк, 2017
-            </p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">17–20 лет</h3>
-            <p class="table__cell_text">Пик обучаемости</p>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">1885 год</h3>
-            <p class="table__cell_text">Открытие кривой забывания</p>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <h3 class="table__cell_heading">1889 год</h3>
-            <p class="table__cell_text">Открытие условного рефлекса</p>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -229,70 +223,58 @@
               alt="Книга Весь мир — школа Салман Хан"
               class="khan__book-pic"
             />
-            <a href="#" class="khan__buy-link animation__opacity"
-              >Купить книгу &rarr;</a
-            >
+            <a href="#" class="khan__buy-link opacity">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
       <section class="kaufman">
-        <div class="kaufman__triangle animation__rotation"></div>
-        <h2 class="section-title kaufman__theme_dark">Принципы обучения</h2>
-        <h2 class="section-subtitle kaufman__theme_dark">от Джоша Кауфмана</h2>
-        <div class="kaufman__table table kaufman__theme_dark">
+        <div class="kaufman__triangle rotation"></div>
+        <h2 class="section-title table__text_theme_dark">Принципы обучения</h2>
+        <h2 class="section-subtitle table__text_theme_dark">
+          от Джоша Кауфмана
+        </h2>
+        <div class="kaufman__table table table__text_theme_dark">
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">1</h3>
-            <p class="table__cell_text">Выберите привлекательный проект.</p>
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">2</h3>
-            <p class="table__cell_text">
-              Сосредоточьтесь на каком-то одном навыке.
-            </p>
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">3</h3>
-            <p class="table__cell_text">
-              Определите целевой уровень мастерства.
-            </p>
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">4</h3>
-            <p class="table__cell_text">Разбейте навык на элементы.</p>
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">5</h3>
-            <p class="table__cell_text">
-              Приготовьте всё необходимое для занятий.
-            </p>
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">6</h3>
-            <p class="table__cell_text">Устраните препятствия для занятий.</p>
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">7</h3>
-            <p class="table__cell_text">
-              Выделите специальное время для занятий.
-            </p>
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">8</h3>
-            <p class="table__cell_text">
-              Создайте быстрые петли обратной связи.
-            </p>
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">9</h3>
-            <p class="table__cell_text">
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
           <div class="table__cell kaufman__table__cell">
-            <h3 class="table__cell_heading">10</h3>
-            <p class="table__cell_text">
-              Уделяйте внимание количеству и скорости.
-            </p>
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
       </section>
@@ -304,25 +286,25 @@
         <div class="resources__logo-zone">
           <a href="#"
             ><img
-              class="resources__link animation__opacity"
+              class="resources__link opacity"
               src="./images/logo/resources-arzamas.svg"
               alt="логотип Арзамас"
           /></a>
           <a href="#">
             <img
-              class="resources__link animation__opacity"
+              class="resources__link opacity"
               src="./images/logo/resources-n1.svg"
               alt="логотип N+1"
           /></a>
           <a href="#">
             <img
-              class="resources__link animation__opacity"
+              class="resources__link opacity"
               src="./images/logo/resources-strelka.svg"
               alt="логотип Стрелка"
           /></a>
           <a href="#">
             <img
-              class="resources__link animation__opacity"
+              class="resources__link opacity"
               src="./images/logo/resources-polka.svg"
               alt="логотип Полка"
           /></a>
@@ -334,20 +316,18 @@
             <img
               src="./images/logo_place_footer.svg"
               alt="Яндекс Практикум"
-              class="logo__place_footer"
+              class="logo_place_footer"
             />
             <p class="footer__author">&copy; Голиков Артем</p>
           </div>
           <div>
             <h4 class="footer__column-heading">О Практикуме</h4>
             <div class="footer__column_links">
-              <a href="#" class="footer__column_links_style animation__opacity"
-                >Главная</a
-              >
-              <a href="#" class="footer__column_links_style animation__opacity"
+              <a href="#" class="footer__column_links_style opacity">Главная</a>
+              <a href="#" class="footer__column_links_style opacity"
                 >Концепция</a
               >
-              <a href="#" class="footer__column_links_style animation__opacity"
+              <a href="#" class="footer__column_links_style opacity"
                 >Наставники</a
               >
             </div>
@@ -356,10 +336,7 @@
             <h4 class="footer__column-heading">Соцсети</h4>
             <div class="footer__column_content_social">
               <div>
-                <a
-                  href="#"
-                  class="footer__column_links_style animation__opacity"
-                >
+                <a href="#" class="footer__column_links_style opacity">
                   <img
                     src="./images/youtube-icon.svg"
                     alt="Иконка Ютуб"
@@ -368,9 +345,7 @@
                 </a>
               </div>
               <div>
-                <a
-                  href="#"
-                  class="footer__column_links_style animation__opacity"
+                <a href="#" class="footer__column_links_style opacity"
                   ><img
                     src="./images/vk_color_white.svg"
                     alt="Иконка ВКонтаке"
@@ -379,9 +354,7 @@
                 >
               </div>
               <div>
-                <a
-                  href="#"
-                  class="footer__column_links_style animation__opacity"
+                <a href="#" class="footer__column_links_style opacity"
                   ><img
                     src="./images/tiktok-icon.svg"
                     alt="Иконка ТикТок"
