--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img
           src="./images/logo_place_header.svg"
           alt="логотип Яндекс Практикум"
-          class="logo_place_header"
+          class="logo logo_place_header"
         />
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
@@ -229,52 +229,66 @@
       </section>
       <section class="kaufman">
         <div class="kaufman__triangle rotation"></div>
-        <h2 class="section-title table__text_theme_dark">Принципы обучения</h2>
-        <h2 class="section-subtitle table__text_theme_dark">
-          от Джоша Кауфмана
-        </h2>
-        <div class="kaufman__table table table__text_theme_dark">
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">1</h3>
-            <p class="table__text">Выберите привлекательный проект.</p>
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <h2 class="section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <div class="table__theme_dark">
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">
+              Выберите привлекательный проект.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">2</h3>
-            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">
+              Сосредоточьтесь на каком-то одном навыке.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">3</h3>
-            <p class="table__text">Определите целевой уровень мастерства.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">
+              Определите целевой уровень мастерства.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">4</h3>
-            <p class="table__text">Разбейте навык на элементы.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">5</h3>
-            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">
+              Приготовьте всё необходимое для занятий.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">6</h3>
-            <p class="table__text">Устраните препятствия для занятий.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">
+              Устраните препятствия для занятий.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">7</h3>
-            <p class="table__text">Выделите специальное время для занятий.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">
+              Выделите специальное время для занятий.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">8</h3>
-            <p class="table__text">Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">
+              Создайте быстрые петли обратной связи.
+            </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">9</h3>
-            <p class="table__text">
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
-          <div class="table__cell kaufman__table__cell">
-            <h3 class="table__heading">10</h3>
-            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">
+              Уделяйте внимание количеству и скорости.
+            </p>
           </div>
         </div>
       </section>
@@ -316,7 +330,7 @@
             <img
               src="./images/logo_place_footer.svg"
               alt="Яндекс Практикум"
-              class="logo_place_footer"
+              class="logo logo_place_footer"
             />
             <p class="footer__author">&copy; Голиков Артем</p>
           </div>
