index.html footer BEM fix

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       </section>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__content_copyright">
+          <div class="footer__column_content_copyright">
             <img
               src="./images/logo_place_footer.svg"
               alt="Яндекс Практикум"
@@ -340,49 +340,35 @@
             />
             <p class="footer__author">&copy; Голиков Артем</p>
           </div>
-          <div>
+          <div class="footer__column_content_info">
             <h4 class="footer__column-heading">О Практикуме</h4>
-            <div class="footer__column_links">
-              <a href="#" class="footer__column_links_style opacity">Главная</a>
-              <a href="#" class="footer__column_links_style opacity"
-                >Концепция</a
-              >
-              <a href="#" class="footer__column_links_style opacity"
-                >Наставники</a
-              >
-            </div>
+            <a href="#" class="footer__column-link opacity">Главная</a>
+            <a href="#" class="footer__column-link opacity">Концепция</a>
+            <a href="#" class="footer__column-link opacity">Наставники</a>
           </div>
-          <div class="footer_columns_socials">
+          <div class="footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
-            <div class="footer__column_content_social">
-              <div>
-                <a href="#" class="footer__column_links_style opacity">
-                  <img
-                    src="./images/youtube-icon.svg"
-                    alt="Иконка Ютуб"
-                    class="footer__column-link"
-                  />YouTube
-                </a>
-              </div>
-              <div>
-                <a href="#" class="footer__column_links_style opacity"
-                  ><img
-                    src="./images/vk_color_white.svg"
-                    alt="Иконка ВКонтаке"
-                    class="footer__column-link"
-                  />ВКонтаке</a
-                >
-              </div>
-              <div>
-                <a href="#" class="footer__column_links_style opacity"
-                  ><img
-                    src="./images/tiktok-icon.svg"
-                    alt="Иконка ТикТок"
-                    class="footer__column-link"
-                  />TikTok</a
-                >
-              </div>
-            </div>
+            <a href="#" class="footer__column-link opacity">
+              <img
+                src="./images/youtube-icon.svg"
+                alt="Иконка Ютуб"
+                class="footer__social-icon"
+              />YouTube
+            </a>
+            <a href="#" class="footer__column-link opacity"
+              ><img
+                src="./images/vk_color_white.svg"
+                alt="Иконка ВКонтаке"
+                class="footer__social-icon"
+              />ВКонтаке
+            </a>
+            <a href="#" class="footer__column-link opacity"
+              ><img
+                src="./images/tiktok-icon.svg"
+                alt="Иконка ТикТок"
+                class="footer__social-icon"
+              />TikTok</a
+            >
           </div>
         </div>
       </footer>
