index.html footer__column BEM fix

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       </section>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img
               src="./images/logo_place_footer.svg"
               alt="Яндекс Практикум"
@@ -340,13 +340,13 @@
             />
             <p class="footer__author">&copy; Голиков Артем</p>
           </div>
-          <div class="footer__column_content_info">
+          <div class="footer__column footer__column_content_info">
             <h4 class="footer__column-heading">О Практикуме</h4>
             <a href="#" class="footer__column-link opacity">Главная</a>
             <a href="#" class="footer__column-link opacity">Концепция</a>
             <a href="#" class="footer__column-link opacity">Наставники</a>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <a href="#" class="footer__column-link opacity">
               <img
