2nd review fixes

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </section>
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a class="feynman__link opacity" href="#">Подробнее &rarr;</a>
           <div class="feynman__image"></div>
         </section>
@@ -344,45 +344,38 @@
             <p class="footer__author">&copy; Голиков Артем</p>
           </div>
           <nav class="footer__column footer__column_content_info">
-            <h4 class="footer__cloumn-links footer__column-heading">
-              О Практикуме
-            </h4>
-            <a href="#" class="footer__cloumn-links footer__column-link opacity"
-              >Главная</a
-            >
-            <a href="#" class="footer__cloumn-links footer__column-link opacity"
-              >Концепция</a
-            >
-            <a href="#" class="footer__cloumn-links footer__column-link opacity"
-              >Наставники</a
-            >
+            <h4 class="footer__column-heading">О Практикуме</h4>
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link opacity">Главная</a>
+              <a href="#" class="footer__column-link opacity">Концепция</a>
+              <a href="#" class="footer__column-link opacity">Наставники</a>
+            </div>
           </nav>
           <nav class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
-            <a
-              href="#"
-              class="footer__cloumn-links footer__column-link opacity"
-            >
-              <img
-                src="./images/youtube-icon.svg"
-                alt="Иконка Ютуб"
-                class="footer__social-icon"
-              />YouTube
-            </a>
-            <a href="#" class="footer__cloumn-links footer__column-link opacity"
-              ><img
-                src="./images/vk_color_white.svg"
-                alt="Иконка ВКонтаке"
-                class="footer__social-icon"
-              />ВКонтаке
-            </a>
-            <a href="#" class="footer__cloumn-links footer__column-link opacity"
-              ><img
-                src="./images/tiktok-icon.svg"
-                alt="Иконка ТикТок"
-                class="footer__social-icon"
-              />TikTok</a
-            >
+            <div class="footer__column-links">
+              <a href="#" class="footer__column-link opacity">
+                <img
+                  src="./images/youtube-icon.svg"
+                  alt="Иконка Ютуб"
+                  class="footer__social-icon"
+                />YouTube
+              </a>
+              <a href="#" class="footer__column-link opacity"
+                ><img
+                  src="./images/vk_color_white.svg"
+                  alt="Иконка ВКонтаке"
+                  class="footer__social-icon"
+                />ВКонтаке
+              </a>
+              <a href="#" class="footer__column-link opacity"
+                ><img
+                  src="./images/tiktok-icon.svg"
+                  alt="Иконка ТикТок"
+                  class="footer__social-icon"
+                />TikTok</a
+              >
+            </div>
           </nav>
         </div>
       </footer>
